Changed packages for dev and testing
