# src/entity/index.ts
@@ -1,5 +1,0 @@
-import { Availability } from "./availability";
-
-export default [
-    Availability
-];
